# claims-governed-poc

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: bootstrap.py  datasets.yaml  env.dev.yaml  env.prodlike.yaml  manual_test.py  snowflake_env.sh  test_connection.py
docs/: LAB_INSTRUCTIONS.md  architecture.md  brd.md  decisions.md  runbook.md  starter_guide.md
pipeline/common/: logging.py  raw_columns.py  snowflake_client.py  utils.py
pipeline/controls/: engine.py  evidence_writer.py  models.py  registry.py  repository.py  run_controls.py
pipeline/ingest/: file_discovery.py  load_to_snowflake.py  reconcile.py  schema_validate.py
pipeline/orchestrator/: nightly_job.py  schedule_cron.txt
pipeline/promote/: promote_int_gold.py
rules/: classification.yaml  controls.yaml  dq_rules.yaml
schemas/: claims_events_schema.json  claims_events_schema.md  claims_snapshot_schema.json  claims_snapshot_schema.md
scripts/: run_sql.py
sql/00_bootstrap/: snowflake_setup.sql  stages_file_formats.sql
sql/01_raw/: create_raw_tables_all_varchar.sql
sql/02_ctrl/: ctrl_procs.sql  ctrl_tables.sql
sql/03_int/: int_dimensions.sql  int_facts.sql
sql/04_gold/: gold_claims_mart.sql
sql/05_semantic/: views_kpi.sql
sql/99_maintenance/: truncate_data_layers.sql  (+1 more)
streamlit/: app.py  components.py  db.py
tests/: acceptance.md  test_control_runner.py  test_dq_rules.py  test_precheck_rowcount_handler.py  test_promote_dedup.py  test_promotion_gate.py  test_raw_columns.py  test_schema_validation.py
(+13 files in other folders)
